# road-damage-kz-release

./: .gitignore  .zenodo.json  CITATION.cff  DATA-LICENSE.md  LICENSE  README.md  RELEASE_NOTES.md  pyproject.toml
configs/: classes.yaml  dataset.yaml  ghost_ca_yolo11s.yaml
data/manifests/: annotations.csv  experiments.csv  external_datasets.csv  images.csv
docs/: annotation-guide.md  data-policy.md  dataset-export.md  external-datasets.md  final-workflow.md  ghost-ca-remote-training.md  github-zenodo-release.md  journal-targets.md  literature-map.md  model-assisted-triage.md  paper-outline.md  post-training-finalization.md  publication-plan.md  release-instructions.md  scaling-workflow.md  submission-checklist.md  submission-metadata.md  suggested-reviewers.md  triage-workflow.md
figures/: class_distribution_table.csv  dataset_summary_table.csv  rdd_import_summary_table.csv  split_distribution_table.csv
paper/: README.md  cover-letter.md  main.tex  make_figures.py
paper/Definitions/: mdpi.cls
reports/: dataset_card.md  experiment_table.csv  paper_summary.json  project_status.json
scripts/: build_public_release_tree.sh  build_submission_package.sh  run_remote_experiments.py
src/road_damage_kz/: __init__.py  annotations.py  assets.py  auto_triage.py  baselines.py  cli.py  (+14 more)
tests/: test_assets.py  test_auto_triage.py  test_baselines.py  test_cli.py  test_commons.py  test_dataset.py  test_experiments.py  test_external.py  test_finishline.py  test_mapillary.py  test_openverse.py  test_privacy.py  test_review.py  test_schema.py  test_scoring.py  test_triage.py
